--- a/glide.yaml
+++ b/glide.yaml
@@ -12,3 +12,4 @@ import:
   version: v0.1.2
 - package: github.com/docker/go-plugins-helpers
 - package: github.com/hashicorp/consul
+- package: github.com/vishvanada/netns
